changes styling of buttons in billing

--- a/src/Components/Oders/Oders.css
+++ b/src/Components/Oders/Oders.css
@@ -66,6 +66,15 @@ text-align: left;
     border-radius: 3px;
     color: #000000;
 }
+.footerBtn button {
+    width: 15%;
+    background-color: #03a9f4;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    height: 6vh;
+    color: #ffffff;
+}
 .searchBtns{
     width: 30%;
     display: flex;
@@ -76,11 +85,11 @@ text-align: left;
     margin-left: 10px;
     width: 30%;
     height: 40px;
-    background-color: #ffffff;;
+    background-color: #03a9f4;
     outline: none;
     border: none;
     border-radius: 5px;
-    color: #000000;
+    color: #ffffff;
 }
 .searchBtns button:hover{
     border: 1px solid rgba(0, 138, 252, 0.822);
@@ -90,15 +99,6 @@ text-align: left;
     align-items: center;
     justify-content: space-between;
     height: 15vh;
-}
-.footerBtn button{
-    width: 15%;
-    background-color: #ffffff;
-    border-radius: 3px;
-    outline: none;
-    border: none; 
-    height: 6vh;
-    color:  #000000;
 }
 .footerBtn button:hover{
     border: 1px solid rgba(0, 138, 252, 0.822);
