--- a/src/Layout/Dashboard/Childs/Inventory/style.css
+++ b/src/Layout/Dashboard/Childs/Inventory/style.css
@@ -30,3 +30,22 @@
   border-color: transparent !important;
   box-shadow: none !important;
 } */
+
+.editable-cell {
+  position: relative;
+}
+
+.editable-cell-value-wrap {
+  padding: 5px 12px;
+  cursor: pointer;
+}
+
+.editable-row:hover .editable-cell-value-wrap {
+  padding: 4px 11px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+}
+
+[data-theme='dark'] .editable-row:hover .editable-cell-value-wrap {
+  border: 1px solid #434343;
+}
