--- a/src/Layout/Dashboard/Childs/Sales/Sales.css
+++ b/src/Layout/Dashboard/Childs/Sales/Sales.css
@@ -1,3 +1,7 @@
 .salesTable {
     box-shadow: 0 2px 2px 0 rgb(153 153 153 / 14%), 0 3px 1px -2px rgb(153 153 153 / 20%), 0 1px 5px 0 rgb(153 153 153 / 12%);
 }
+
+p{
+    color: rgba(114, 113, 113, 0.8);
+}
